# agent-team-pipeline

./: .gitignore  LICENSE  README.md  team-architect.md  team-builder.md  team-captain.md  team-engineer.md  team-forge.md  team-git.md  team-implementer.md  team-inspector.md  team-lead.md  team-planner.md  team-reviewer.md  team-shipper.md
zero-mcp/: README.md  pyproject.toml
zero-mcp/src/zero_mcp/: __init__.py  __main__.py  server.py
zero-mcp/src/zero_mcp/config/: pricing.py  settings.py
zero-mcp/src/zero_mcp/installer/: setup.py
zero-mcp/src/zero_mcp/memory/: embeddings.py  similarity.py  store.py
zero-mcp/src/zero_mcp/parsers/: claude_code.py  opencode.py
zero-mcp/src/zero_mcp/tools/: drift.py  indexer.py  metrics.py  patterns.py  routing.py  session.py  skills.py
zero-mcp/tests/: conftest.py  test_drift.py  test_embeddings.py  test_indexer.py  test_patterns.py  test_routing.py  test_server.py  test_similarity.py  test_skills.py  test_store.py
