[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zero-mcp"
version = "0.1.0"
description = "MCP server for the Zero multi-agent orchestration system"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "tiktoken>=0.6",
    "tokenizers>=0.15",
]

[project.scripts]
zero-mcp = "zero_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
